# bevy-pokemon

./: Cargo.toml
assets/maps/: AgathasRoom.tmx  BikeShop.tmx  BillsHouse.tmx  BrunosRoom.tmx  CeladonChiefHouse.tmx  CeladonCity.tmx  CeladonDiner.tmx  CeladonGym.tmx  CeladonHotel.tmx  CeladonMansion1F.tmx  CeladonMansion2F.tmx  CeladonMansion3F.tmx  CeladonMansionRoof.tmx  CeladonMart1F.tmx  CeladonMart2F.tmx  CeladonMart3F.tmx  CeladonMart4F.tmx  CeladonMart5F.tmx  CeladonMartRoof.tmx  CeruleanBadgeHouse.tmx  CeruleanCave1F.tmx  CeruleanCave2F.tmx  CeruleanCaveB1F.tmx  CeruleanCity.tmx  CeruleanGym.tmx  CeruleanTrashedHouse.tmx  ChampionsRoom.tmx  CinnabarGym.tmx  CinnabarIsland.tmx  CinnabarLab.tmx  CinnabarLabFossilRoom.tmx  CinnabarLabMetronomeRoom.tmx  CinnabarLabTradeRoom.tmx  Colosseum.tmx  DiglettsCave.tmx  DiglettsCaveRoute11.tmx  FuchsiaCity.tmx  FuchsiaGym.tmx  FuchsiaMeetingRoom.tmx  GameCorner.tmx  (+142 more)
assets/tilesheets/: CollisionTileSheet.tsx  Pallet_Town_Block_Sheet.tsx
src/: animation.rs  camera.rs  collision.rs  components.rs  constants.rs  door.rs  main.rs  player.rs  state.rs  warp.rs  world.rs
src/map/: loader.rs  mod.rs  plugin.rs  spawner.rs  tile_kind.rs
